<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name_hint"/>

            <TextView
                android:id="@+id/topping_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_header"
                android:layout_below="@id/name_field"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                style="@style/HeaderTextStyle"/>
            <LinearLayout
                android:id="@+id/topping_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/topping_header"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp">
                <CheckBox
                    android:id="@+id/whip_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whip_cream_box"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chocolate_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/topping_layout"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp">
                <CheckBox
                    android:id="@+id/choc_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choc_box"/>
            </LinearLayout>

            <TextView
                android:id="@+id/QuantHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chocolate_layout"
                android:text="@string/quantity_header"
                android:paddingLeft="10dp"
                style="@style/HeaderTextStyle"/>
            <LinearLayout
                android:id="@+id/quant_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_below="@+id/QuantHeader"
                android:paddingTop="16dp"
                >
                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/order_summary_text_view"
                    android:text="-"
                    android:onClick="decrement"/>
                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textStyle="bold"
                    />
                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/order_summary_text_view"
                    android:text="+"
                    android:onClick="increment"/>
            </LinearLayout>

            <TextView
                android:id="@+id/PriceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary_header"
                android:paddingLeft="10dp"
                android:layout_below="@+id/quant_layout"
                android:paddingTop="10dp"
                style="@style/HeaderTextStyle"/>
            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_default"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:layout_below="@+id/PriceHeader"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_summary_text_view"
                android:text="@string/order_button"
                android:onClick="submitOrder"/>
        </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
